<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.tremolosecurity.openunison</groupId>
  <artifactId>operator</artifactId>
  <version>1.0.0</version>

  <name>openunison-kubernetes-operator</name>


  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <swagger-annotations-version>1.6.3</swagger-annotations-version>
    <jersey-version>2.35</jersey-version>
    <jackson.version>2.14.2</jackson.version>
    <jackson-core.version>2.14.2</jackson-core.version>
    <jackson-version>2.14.2</jackson-version>
    <jackson-databind-version>2.14.2</jackson-databind-version>
    <jackson-databind-nullable-version>0.2.1</jackson-databind-nullable-version>
    <jakarta-annotation-version>1.3.5</jakarta-annotation-version>
    <junit-version>4.13.2</junit-version>
    <scribejava-apis-version>8.3.1</scribejava-apis-version>
    <bcprov.version>1.70</bcprov.version>
    <joda.version>2.12.5</joda.version>
    <json-simple.version>1.1.1</json-simple.version>
    <gson.version>2.10.1</gson.version>
    <swagger.version>1.6.9</swagger.version>
    <javax-annotations.version>1.2</javax-annotations.version>
    <jsr305.version>3.0.2</jsr305.version>
    <gson-fire.version>1.8.5</gson-fire.version>
    <okio.version>3.3.0</okio.version>
    <postgres.version>42.5.0</postgres.version>
    <mariadb.version>3.1.3</mariadb.version>
    <mysql.version>8.0.33</mysql.version>
    <mssql.version>12.2.0.jre11</mssql.version>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>5.9.2</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk15on</artifactId>
      <version>${bcprov.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk15on</artifactId>
      <version>${bcprov.version}</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-ext-jdk15on</artifactId>
      <version>${bcprov.version}</version>
    </dependency>
    <dependency>
      <groupId>joda-time</groupId>
      <artifactId>joda-time</artifactId>
      <version>${joda.version}</version>
    </dependency>
    <dependency>
      <groupId>com.googlecode.json-simple</groupId>
      <artifactId>json-simple</artifactId>
      <version>${json-simple.version}</version>
      <exclusions>
        <exclusion>
          <artifactId>junit</artifactId>
          <groupId>junit</groupId>
        </exclusion>

      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
      <version>${gson.version}</version>
    </dependency>

    <dependency>
      <groupId>io.swagger</groupId>
      <artifactId>swagger-annotations</artifactId>
      <version>${swagger.version}</version>
    </dependency>
    <dependency>
      <groupId>javax.annotation</groupId>
      <artifactId>javax.annotation-api</artifactId>
      <version>${javax-annotations.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
      <version>${jsr305.version}</version>
    </dependency>
    <dependency>
      <groupId>io.gsonfire</groupId>
      <artifactId>gson-fire</artifactId>
      <version>${gson-fire.version}</version>
    </dependency>
    <dependency>
      <groupId>com.squareup.okio</groupId>
      <artifactId>okio</artifactId>
      <version>${okio.version}</version>

    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.core</groupId>
      <artifactId>jackson-databind</artifactId>
      <version>${jackson.version}</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>${jackson-core.version}</version>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mariadb.jdbc</groupId>
      <artifactId>mariadb-java-client</artifactId>
      <version>${mariadb.version}</version>
    </dependency>

    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>${mysql.version}</version>
    </dependency>

    <dependency>
      <groupId>com.microsoft.sqlserver</groupId>
      <artifactId>mssql-jdbc</artifactId>
      <version>${mssql.version}</version>
    </dependency>

  </dependencies>

  <build>

    <plugins>


      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.3</version>
        <configuration>
          <transformers>
            <transformer
              implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
            <transformer
              implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
              <mainClass>com.tremolosecurity.openunison.command.OpenUnisonOperator</mainClass>
            </transformer>
          </transformers>
          <createDependencyReducedPom>false</createDependencyReducedPom>

          <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/*.SF</exclude>
                <exclude>META-INF/*.DSA</exclude>
                <exclude>META-INF/*.RSA</exclude>
              </excludes>
            </filter>
          </filters>
        </configuration>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>

      </plugin>
      <plugin>
        <groupId>org.openapitools</groupId>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <!-- RELEASE_VERSION -->
        <version>6.3.0</version>
        <!-- /RELEASE_VERSION -->
        <executions>
          <execution>
            <id>gen-ou-crd-api</id>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${project.basedir}/src/main/resources/openunison-api.yaml</inputSpec>
              <generatorName>java</generatorName>
              <library>okhttp-gson</library>
              <generateApis>false</generateApis>
              <!--<generateSupportingFiles>false</generateSupportingFiles>-->
              <supportingFilesToGenerate>JSON.java,RFC3339DateFormat.java</supportingFilesToGenerate>
              <configOptions>
                <sourceFolder>src/main/java</sourceFolder>
                <modelPackage>com.tremolosecurity.openunison.crd</modelPackage>
              </configOptions>
            </configuration>
          </execution>
          <execution>
            <id>gen-k8s-api</id>
            <goals>
              <goal>generate</goal>
            </goals>
            <configuration>
              <inputSpec>${project.basedir}/src/main/resources/kubernetes-api-1.27.json</inputSpec>
              <generatorName>java</generatorName>
              <library>okhttp-gson</library>
              <generateApis>false</generateApis>

              <!--<generateSupportingFiles>false</generateSupportingFiles>-->
              <supportingFilesToGenerate>JSON.java,RFC3339DateFormat.java</supportingFilesToGenerate>
              <configOptions>
                <sourceFolder>src/main/java</sourceFolder>
                <modelPackage>io.k8s.obj</modelPackage>

              </configOptions>
            </configuration>
          </execution>

        </executions>
      </plugin>
    </plugins>


  </build>
  <profiles>
    <profile>
      <id>native</id>
      <dependencies>
        <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter</artifactId>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.junit.platform</groupId>
          <artifactId>junit-platform-launcher</artifactId>
          <version>1.9.2</version>
          <scope>test</scope>
        </dependency>
      </dependencies>
      <build>
        <plugins>
          <plugin>
            <groupId>org.openapitools</groupId>
            <artifactId>openapi-generator-maven-plugin</artifactId>
            <!-- RELEASE_VERSION -->
            <version>6.3.0</version>
            <!-- /RELEASE_VERSION -->
            <executions>
              <execution>
                <id>gen-ou-crd-api</id>
                <goals>
                  <goal>generate</goal>
                </goals>
                <configuration>
                  <inputSpec>${project.basedir}/src/main/resources/openunison-api.yaml</inputSpec>
                  <generatorName>java</generatorName>
                  <library>okhttp-gson</library>
                  <generateApis>false</generateApis>

                  <supportingFilesToGenerate>JSON.java,RFC3339DateFormat.java</supportingFilesToGenerate>
                  <configOptions>
                    <sourceFolder>src/main/java</sourceFolder>
                    <modelPackage>com.tremolosecurity.openunison.crd</modelPackage>

                  </configOptions>
                </configuration>
              </execution>
              <execution>
                <id>gen-k8s-api</id>
                <goals>
                  <goal>generate</goal>
                </goals>
                <configuration>
                  <inputSpec>${project.basedir}/src/main/resources/kubernetes-api-1.27.json</inputSpec>
                  <generatorName>java</generatorName>
                  <library>okhttp-gson</library>
                  <generateApis>false</generateApis>

                  <!--<generateSupportingFiles>false</generateSupportingFiles>-->
                  <supportingFilesToGenerate>JSON.java,RFC3339DateFormat.java</supportingFilesToGenerate>
                  <configOptions>
                    <sourceFolder>src/main/java</sourceFolder>
                    <modelPackage>io.k8s.obj</modelPackage>

                  </configOptions>
                </configuration>
              </execution>

            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.22.0</version>
            <dependencies>
              <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter-engine</artifactId>
                <version>5.9.2</version>
              </dependency>
            </dependencies>
            <configuration>
              <argLine>
                --add-opens java.base/java.time=ALL-UNNAMED
              </argLine>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.graalvm.buildtools</groupId>
            <artifactId>native-maven-plugin</artifactId>
            <version>0.9.20</version>
            <extensions>true</extensions>
            <executions>
              <execution>
                <id>build-native</id>
                <goals>
                  <goal>compile-no-fork</goal>
                </goals>
                <phase>package</phase>
              </execution>
              <execution>
                <id>test-native</id>
                <goals>
                  <goal>test</goal>
                </goals>
                <phase>test</phase>
              </execution>
            </executions>
            <configuration>

              <agent>
                <enabled>true</enabled>
              </agent>
              <buildArgs>
                <arg>--enable-url-protocols=https</arg>
              </buildArgs>
            </configuration>

          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>